--- a/posts/example-post.mdx
+++ b/posts/example-post.mdx
@@ -24,6 +24,35 @@ Something has always existed. According to physics, there can never be true phys
 
 ---
 
+[日本のおすすめの場所](https://mymikke.com/)
+[旅行ブログ](https://waction.org/)
+[よさこい情報](https://yosakoilove.com/)
+[旅行情報](https://jp.mymikke.com/)
+[ChatGPT プラグイン](https://waction.org/chatgpt-plugin-list/)
+[世界の名画](https://wikimeiga.com/)
+[クラシファイ](https://kurashify.com/)
+[クチコミネット](https://ktkm.net)
+[コスメブログ](https://73canvas.com/)
+[ツムツム  最強 ランキング](https://geimy.com/pair-tsum-ranking/?swcfpc=1)
+[スマホとアプリ](https://app2spec.com/)
+[賃貸レビュー　部屋調べ](https://heyashirabe.com/)
+[日本語 KAJABI 導入](https://japan.mykajabi.com)
+[ゲーム 評価 攻略](https://geimy.com)
+[キャンプ場の口コミ](https://hodagori.com/)
+[メーカーハント](https://maker-hunt.com/)
+[Kajabi導入](https://linktr.ee/hodakato)
+[Numberindex](https://number-index.com/)
+[【最新版】ツムツムランドの全ツム能力比較表 ランキング どれが一番強い？](https://geimy.com/tusmtusmland/)
+[楽しいチャット](https://telchat.net/)
+[名曲ネット](https://meikyoku.net/)
+[web図鑑](https://webzukan.com/)
+[Eラーニング制作](https://hodakakato.com/)
+[スパムメール情報](https://spamu.link/)
+[海外コスメ](https://hotcosme.com/)
+[ランキング](https://rankpanda.net/)
+[企業 口コミ 評判](https://9lient.com/)
+[遊戯王カードレビュー](https://jp.yugioo.com/)
+
 
 ## Emphasis
 
